Fix panels being unscrollable on mobile

--- a/src/ui.css
+++ b/src/ui.css
@@ -33,7 +33,6 @@
 .drawer {
 	background: var(--drawer-background);
 	border: var(--drawer-border);
-	touch-action: none;
 	overflow: scroll;
 }
 
